added deploy script

--- a/kaleidoscope.cabal
+++ b/kaleidoscope.cabal
@@ -28,7 +28,7 @@ executable preprocess
     , haskeline            >= 0.7
     , llvm-general         >= 3.3.8.2
     , llvm-general-pure    >= 3.3.8.2
-    , pretty-show          >= 1.6
+    , pretty-show          == 1.6
     , libffi               == 0.1
     , mtl
     , transformers
