--- a/kaleidoscope.cabal
+++ b/kaleidoscope.cabal
@@ -24,7 +24,7 @@ executable preprocess
       base                 >= 4.6 && <4.7
     , pandoc               >= 1.12
     , haskeline            >= 0.7
-    , llvm-general         >= 3.3.8.2
-    , llvm-general-pure    >= 3.3.8.2
+    , llvm-general         == 3.3.8.2
+    , llvm-general-pure    == 3.3.8.2
     , mtl
     , transformers
