--- a/kaleidoscope.cabal
+++ b/kaleidoscope.cabal
@@ -23,7 +23,7 @@ executable preprocess
   build-depends:       
       base                 >= 4.6 && <4.7
     , pandoc               >= 1.12
-    , haskeline            >= 0.7
+    , haskeline            == 0.7.0.0 
     , llvm-general         == 3.3.8.2
     , llvm-general-pure    == 3.3.8.2
     , mtl
