--- a/kaleidoscope.cabal
+++ b/kaleidoscope.cabal
@@ -13,18 +13,38 @@ build-type:          Simple
 cabal-version:       >=1.10
 Bug-Reports:         https://github.com/sdiehl/kaleidoscope/issues
 
+Flag Tutorial
+  Description: Compile with pandoc preprocessor
+  Default:     False
+
 Source-Repository head
     Type: git
     Location: git@github.com:sdiehl/kaleidoscope.git
 
-executable preprocess
+library 
   default-language:    Haskell2010
-  main-is: preprocessor.hs
   build-depends:       
       base                 >= 4.6 && <4.7
-    , pandoc               >= 1.12
-    , haskeline            == 0.7.0.0 
+    , haskeline            == 0.7.1.2 
     , llvm-general         == 3.3.8.2
     , llvm-general-pure    == 3.3.8.2
     , mtl
     , transformers
+
+-- Enable only if you want to compile the tutorial text itself.
+
+executable preprocess
+  main-is: preprocessor.hs
+  if flag(tutorial)
+      buildable: True
+      default-language:    Haskell2010
+      build-depends:       
+          base                 >= 4.6 && <4.7
+        , pandoc               >= 1.12
+        , haskeline            == 0.7.0.0 
+        , llvm-general         == 3.3.8.2
+        , llvm-general-pure    == 3.3.8.2
+        , mtl
+        , transformers
+  else
+      buildable: False
