relax llvm-general version

--- a/kaleidoscope.cabal
+++ b/kaleidoscope.cabal
@@ -26,7 +26,7 @@ library
   build-depends:       
       base                 >= 4.6 && <4.7
     , haskeline            == 0.7.1.2 
-    , llvm-general         == 3.3.8.2
-    , llvm-general-pure    == 3.3.8.2
+    , llvm-general         == 3.3.8.*
+    , llvm-general-pure    == 3.3.8.*
     , mtl
     , transformers
