more ghc & llvm version tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,15 @@
 # need/want testing for.
 env:
  - CABALVER=1.18 GHCVER=7.6.3 LLVMVER=3.5
+ - CABALVER=1.18 GHCVER=7.6.3 LLVMVER=3.6
  - CABALVER=1.18 GHCVER=7.8.4 LLVMVER=3.5
+ - CABALVER=1.18 GHCVER=7.8.4 LLVMVER=3.6
  - CABALVER=1.22 GHCVER=7.10.1 LLVMVER=3.5
+ - CABALVER=1.22 GHCVER=7.10.1 LLVMVER=3.6
  - CABALVER=1.22 GHCVER=7.10.2 LLVMVER=3.5
+ - CABALVER=1.22 GHCVER=7.10.2 LLVMVER=3.6
+ - CABALVER=1.22 GHCVER=7.10.3 LLVMVER=3.5
+ - CABALVER=1.22 GHCVER=7.10.3 LLVMVER=3.6
  # - CABALVER=head GHCVER=head   # see section about GHC HEAD snapshots
 
 # Note: the distinction between `before_install` and `install` is not important.
