--- a/kaleidoscope.cabal
+++ b/kaleidoscope.cabal
@@ -29,9 +29,9 @@ executable chapter2
     , haskeline            >= 0.7.1.2
     , llvm-general         >= 3.5.0.0
     , llvm-general-pure    >= 3.5.0
-    , mtl
     , parsec               >= 3.1
-    , transformers         >= 0.5
+    , mtl                  >= 2.1.3
+    , transformers         >= 0.3.0.0 && < 0.5
   hs-source-dirs:      src/chapter2
 
 executable chapter3
@@ -42,9 +42,9 @@ executable chapter3
     , haskeline            >= 0.7.1.2
     , llvm-general         >= 3.5.0.0
     , llvm-general-pure    >= 3.5.0
-    , mtl                  >= 2.2
     , parsec               >= 3.1
-    , transformers         >= 0.5
+    , mtl                  >= 2.1.3
+    , transformers         >= 0.3.0.0 && < 0.5
     , containers           >= 0.4
   hs-source-dirs:      src/chapter3
 
@@ -56,10 +56,10 @@ executable chapter4
     , haskeline            >= 0.7.1.2
     , llvm-general         >= 3.5.0.0
     , llvm-general-pure    >= 3.5.0
-    , mtl                  >= 2.2
     , parsec               >= 3.1
-    , transformers         >= 0.5
     , containers           >= 0.4
+    , mtl                  >= 2.1.3
+    , transformers         >= 0.3.0.0 && < 0.5
   hs-source-dirs:      src/chapter4
 
 executable chapter5
@@ -70,10 +70,10 @@ executable chapter5
     , haskeline            >= 0.7.1.2
     , llvm-general         >= 3.5.0.0
     , llvm-general-pure    >= 3.5.0
-    , mtl                  >= 2.2
     , parsec               >= 3.1
-    , transformers         >= 0.5
     , containers           >= 0.4
+    , mtl                  >= 2.1.3
+    , transformers         >= 0.3.0.0 && < 0.5
   hs-source-dirs:      src/chapter5
 
 executable chapter6
@@ -84,10 +84,10 @@ executable chapter6
     , haskeline            >= 0.7.1.2
     , llvm-general         >= 3.5.0.0
     , llvm-general-pure    >= 3.5.0
-    , mtl                  >= 2.2
     , parsec               >= 3.1
-    , transformers         >= 0.5
     , containers           >= 0.4
+    , mtl                  >= 2.1.3
+    , transformers         >= 0.3.0.0 && < 0.5
   hs-source-dirs:      src/chapter6
 
 executable chapter7
@@ -98,10 +98,10 @@ executable chapter7
     , haskeline            >= 0.7.1.2
     , llvm-general         >= 3.5.0.0
     , llvm-general-pure    >= 3.5.0
-    , mtl                  >= 2.2
     , parsec               >= 3.1
-    , transformers         >= 0.5
     , containers           >= 0.4
+    , mtl                  >= 2.1.3
+    , transformers         >= 0.3.0.0 && < 0.5
   hs-source-dirs:      src/chapter7
 
 library
@@ -111,5 +111,5 @@ library
     , haskeline            >= 0.7.1.2
     , llvm-general         >= 3.5.0.0
     , llvm-general-pure    >= 3.5.0
-    , transformers         >= 0.5
-    , mtl
+    , mtl                  >= 2.1.3
+    , transformers         >= 0.3.0.0 && < 0.5
