Update tutorial and code for LLVM 4.0 using llvm-hs (#41)
* Update code from llvm-general-3.5 to llvm-hs-4.0

* Update Travis config

* Update tutorial (and a minor code alignment adjustment)

* Update setup instructions

* Simplify and structure setup instructions (which are now identical between README.md and tutorial.md)

* Revert to (modified version of) original Travis config

* Remove duplicate tutorial build instructions

--- a/kaleidoscope.cabal
+++ b/kaleidoscope.cabal
@@ -13,10 +13,6 @@ build-type:          Simple
 cabal-version:       >=1.10
 Bug-Reports:         https://github.com/sdiehl/kaleidoscope/issues
 
-Flag Tutorial
-  Description: Compile with pandoc preprocessor
-  Default:     False
-
 Source-Repository head
     Type: git
     Location: git@github.com:sdiehl/kaleidoscope.git
@@ -29,13 +25,13 @@ executable chapter2
     Syntax
     Lexer
   build-depends:
-      base                 >= 4.6 && <4.10
+      base                 >= 4.7 && <5
     , haskeline            >= 0.7.1.2
-    , llvm-general         >= 3.5.0.0
-    , llvm-general-pure    >= 3.5.0
+    , llvm-hs              >= 4.0.0.0
+    , llvm-hs-pure         >= 4.0.0.0
     , parsec               >= 3.1
     , mtl                  >= 2.1.3
-    , transformers         >= 0.3.0.0 && < 0.5
+    , transformers         >= 0.3.0.0 && < 0.6
   hs-source-dirs:      src/chapter2
 
 executable chapter3
@@ -49,13 +45,13 @@ executable chapter3
     Syntax
 
   build-depends:
-      base                 >= 4.6 && <4.10
+      base                 >= 4.7 && <5
     , haskeline            >= 0.7.1.2
-    , llvm-general         >= 3.5.0.0
-    , llvm-general-pure    >= 3.5.0
+    , llvm-hs              >= 4.0.0.0
+    , llvm-hs-pure         >= 4.0.0.0
     , parsec               >= 3.1
     , mtl                  >= 2.1.3
-    , transformers         >= 0.3.0.0 && < 0.5
+    , transformers         >= 0.3.0.0 && < 0.6
     , containers           >= 0.4
   hs-source-dirs:      src/chapter3
 
@@ -71,14 +67,14 @@ executable chapter4
     Syntax
 
   build-depends:
-      base                 >= 4.6 && <4.10
+      base                 >= 4.7 && <5
     , haskeline            >= 0.7.1.2
-    , llvm-general         >= 3.5.0.0
-    , llvm-general-pure    >= 3.5.0
+    , llvm-hs              >= 4.0.0.0
+    , llvm-hs-pure         >= 4.0.0.0
     , parsec               >= 3.1
     , containers           >= 0.4
     , mtl                  >= 2.1.3
-    , transformers         >= 0.3.0.0 && < 0.5
+    , transformers         >= 0.3.0.0 && < 0.6
   hs-source-dirs:      src/chapter4
 
 executable chapter5
@@ -93,14 +89,14 @@ executable chapter5
     Syntax
 
   build-depends:
-      base                 >= 4.6 && <4.10
+      base                 >= 4.7 && <5
     , haskeline            >= 0.7.1.2
-    , llvm-general         >= 3.5.0.0
-    , llvm-general-pure    >= 3.5.0
+    , llvm-hs              >= 4.0.0.0
+    , llvm-hs-pure         >= 4.0.0.0
     , parsec               >= 3.1
     , containers           >= 0.4
     , mtl                  >= 2.1.3
-    , transformers         >= 0.3.0.0 && < 0.5
+    , transformers         >= 0.3.0.0 && < 0.6
   hs-source-dirs:      src/chapter5
 
 executable chapter6
@@ -115,14 +111,14 @@ executable chapter6
    Syntax
 
   build-depends:
-      base                 >= 4.6 && <4.10
+      base                 >= 4.7 && <5
     , haskeline            >= 0.7.1.2
-    , llvm-general         >= 3.5.0.0
-    , llvm-general-pure    >= 3.5.0
+    , llvm-hs              >= 4.0.0.0
+    , llvm-hs-pure         >= 4.0.0.0
     , parsec               >= 3.1
     , containers           >= 0.4
     , mtl                  >= 2.1.3
-    , transformers         >= 0.3.0.0 && < 0.5
+    , transformers         >= 0.3.0.0 && < 0.6
   hs-source-dirs:      src/chapter6
 
 executable chapter7
@@ -137,22 +133,22 @@ executable chapter7
     Syntax
 
   build-depends:
-      base                 >= 4.6 && <4.10
+      base                 >= 4.7 && <5
     , haskeline            >= 0.7.1.2
-    , llvm-general         >= 3.5.0.0
-    , llvm-general-pure    >= 3.5.0
+    , llvm-hs              >= 4.0.0.0
+    , llvm-hs-pure         >= 4.0.0.0
     , parsec               >= 3.1
     , containers           >= 0.4
     , mtl                  >= 2.1.3
-    , transformers         >= 0.3.0.0 && < 0.5
+    , transformers         >= 0.3.0.0 && < 0.6
   hs-source-dirs:      src/chapter7
 
 library
   default-language:    Haskell2010
   build-depends:
-      base                 >= 4.6 && <4.10
+      base                 >= 4.7 && <5
     , haskeline            >= 0.7.1.2
-    , llvm-general         >= 3.5.0.0
-    , llvm-general-pure    >= 3.5.0
+    , llvm-hs              >= 4.0.0.0
+    , llvm-hs-pure         >= 4.0.0.0
     , mtl                  >= 2.1.3
-    , transformers         >= 0.3.0.0 && < 0.5
+    , transformers         >= 0.3.0.0 && < 0.6
