--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@
 # the last release in a major GHC version. Feel free to omit lines listings versions you don't
 # need/want testing for.
 env:
- - CABALVER=1.18 GHCVER=7.6.3 LLVMVER=3.5
- - CABALVER=1.18 GHCVER=7.8.4 LLVMVER=3.5
- - CABALVER=1.22 GHCVER=7.10.1 LLVMVER=3.5
- - CABALVER=1.22 GHCVER=7.10.2 LLVMVER=3.5
+ - CABALVER=1.18 GHCVER=7.8.4 LLVMVER=4.0
+ - CABALVER=1.22 GHCVER=7.10.1 LLVMVER=4.0
+ - CABALVER=1.22 GHCVER=7.10.2 LLVMVER=4.0
+ - CABALVER=1.24 GHCVER=8.0.2 LLVMVER=4.0
  # - CABALVER=head GHCVER=head   # see section about GHC HEAD snapshots
 
 # Note: the distinction between `before_install` and `install` is not important.
@@ -16,34 +16,29 @@ before_install:
  - travis_retry sudo apt-get update
  - travis_retry sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER # see note about happy/alex
  - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH:$HOME/.cabal/bin:$PATH
- - |
-   if [ $GHCVER = "head" ] || [ ${GHCVER%.*} = "7.8" ] || [ ${GHCVER%.*} = "7.10" ]; then
-     travis_retry sudo apt-get install happy-1.19.4 alex-3.1.3
-     export PATH=/opt/alex/3.1.3/bin:/opt/happy/1.19.4/bin:$PATH
-   else
-     travis_retry sudo apt-get install happy alex
-   fi
-
+ - travis_retry sudo apt-get install happy-1.19.5 alex-3.1.3
+ - export PATH=/opt/alex/3.1.3/bin:/opt/happy/1.19.4/bin:$PATH
  # update gcc and g++
  - gcc --version
  - g++ --version
  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
  - sudo apt-get update -qq
- - sudo apt-get install -qq g++-4.8 gcc-4.8
+ - sudo apt-get install -qq g++-5 gcc-5
  - gcc --version
  - g++ --version
- - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90
- - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
+ - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 90
+ - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 90
  - gcc --version
  - g++ --version
 
  # update llvm
  - wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key|sudo apt-key add -
- - travis_retry sudo add-apt-repository "deb http://llvm.org/apt/precise/ llvm-toolchain-precise main"
- - travis_retry sudo add-apt-repository "deb http://llvm.org/apt/precise/ llvm-toolchain-precise-$LLVMVER main"
+ - travis_retry sudo add-apt-repository "deb http://apt.llvm.org/precise/ llvm-toolchain-precise main"
+ - travis_retry sudo add-apt-repository "deb http://apt.llvm.org/precise/ llvm-toolchain-precise-$LLVMVER main"
  - travis_retry sudo apt-get update
  - sudo apt-get install libedit-dev -y
  - sudo apt-get install -y llvm-$LLVMVER llvm-$LLVMVER-dev
+ - alias llvm-config="llvm-config-4.0"
  #- sudo ln -s /usr/bin/opt-$LLVMVER /usr/bin/opt
  - export PATH="/usr/bin:$PATH"
 
