--- a/kaleidoscope.cabal
+++ b/kaleidoscope.cabal
@@ -7,7 +7,7 @@ license:             MIT
 license-file:        LICENSE-MIT
 author:              Stephen Diehl
 maintainer:          stephen.m.diehl@gmail.com
-copyright:           2012 Stephen Diehl
+copyright:           2012-2020 Stephen Diehl
 Category:            Compilers
 build-type:          Simple
 cabal-version:       >=1.10
@@ -16,6 +16,29 @@ Bug-Reports:         https://github.com/sdiehl/kaleidoscope/issues
 Source-Repository head
     Type: git
     Location: git@github.com:sdiehl/kaleidoscope.git
+
+library
+  default-language:    Haskell2010
+  build-depends:
+      base                 >= 4.7 && <5
+    , haskeline            >= 0.7.1.2
+    , llvm-hs              >= 9.0.0 && <10.0.0
+    , llvm-hs-pure         >= 9.0.0 && <10.0.0
+    , mtl                  >= 2.1.3
+    , transformers         >= 0.3.0.0 && < 0.6
+
+executable preprocessor
+  default-language:    Haskell2010
+  main-is:             preprocessor.hs
+  build-depends:
+    base                 >= 4.7 && <5,
+    text                 >= 1.1,
+    mtl                  >= 2.1,
+    transformers         >= 0.3,
+    pandoc               >= 2.8  && <3.0,
+    pandoc-types         >= 1.20 && <2.0
+
+
 
 executable chapter2
   default-language:    Haskell2010
@@ -143,13 +166,3 @@ executable chapter7
     , mtl                  >= 2.1.3
     , transformers         >= 0.3.0.0 && < 0.6
   hs-source-dirs:      src/chapter7
-
-library
-  default-language:    Haskell2010
-  build-depends:
-      base                 >= 4.7 && <5
-    , haskeline            >= 0.7.1.2
-    , llvm-hs              >= 9.0.0 && <10.0.0
-    , llvm-hs-pure         >= 9.0.0 && <10.0.0
-    , mtl                  >= 2.1.3
-    , transformers         >= 0.3.0.0 && < 0.6
